various versions of dict

--- a/_notebooks/2021-07-25-ch3-dictionaries-and-sets.ipynb
+++ b/_notebooks/2021-07-25-ch3-dictionaries-and-sets.ipynb
@@ -88,6 +88,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now you can build dicts in different ways\n",
+    "\n",
+    "a = dict(one=1, two=2, three=3)\n",
+    "b = {'one': 1, 'two': 2, 'three': 3}\n",
+    "c = dict(zip(['one', 'two', 'three'], [1, 2, 3]))\n",
+    "d = dict([('two', 2), ('one', 1), ('three', 3)])\n",
+    "e = dict({'three': 3, 'two': 2, 'one':1})\n",
+    "\n",
+    "a == b == c == d == e"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,18 +159,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Overview of Common Mapping Methods\n",
+    "\n",
     "There are 3 main dictionary types. `dict`, `defaultdict`, `orderedDict`.\n",
     "\n",
-    "dicts have a `get` function and `setdefault` function. Use the 2 wisely. Most of the time `setdefault()` is a wise choice because using `get()` can lead to more searches.\n",
+    "### Handlying Missing Keys with setdefault\n",
+    "dicts have a `get` function which is what is used most of the time when you want to handle missing keys (every pythonista knows this one!). In some cases where we have to handle key error and use a default value when the keys is not present don't use `get` to define the default value, instead use `setdefault` function. Use the 2 wisely. Most of the time `setdefault()` is a wise choice because using `get()` can lead to more searches. This is when you are inserting. if you also what to do a lookup...\n",
+    "\n",
+    "### Mappings with Flexible Key Lookup\n",
     "\n",
     "There are 2 other methods to do this. \n",
-    "1. Use `defaultdict`\n",
-    "2. subclass dict and add a `__missing__` method"
+    "1. Use `defaultdict` - this expect a callable to be passed to the `defaultdict` constructor that will be called when there is a key error in the `__getitem__`. Note this will only be called for `__getitem__` and not for other functions like `.get()`. Under the hood, it is using the `__missing__` special methods.\n",
+    "2. subclass dict and add a `__missing__` method - when `__getitem__` is called with a key that is not present, it calls the `__missing__` function if it is implemented to handle it. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +184,7 @@
        "[]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +194,7 @@
     "\n",
     "# takes a callable which is called when there is a key error\n",
     "d = defaultdict(list)\n",
-    "d[0]"
+    "d[0] # what happend? -> calls list() to create list and inserts that into key"
    ]
   },
   {
@@ -173,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +214,9 @@
     "\n",
     "class PinToFun(dict):\n",
     "    \n",
+    "    # the __getitem in dict calls this function\n",
     "    def __missing__(self, key):\n",
-    "        if isinstance(key, str):\n",
+    "        if isinstance(key, str): # check to avoid recursion\n",
     "            raise KeyError(key)\n",
     "        return self[str(key)]\n",
     "    \n",
@@ -198,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +241,7 @@
        "'I/O'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -227,9 +261,9 @@
      "evalue": "0",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-bc9cb425f661>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-bc9cb425f661>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m: 0"
      ]
     }
@@ -240,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +283,7 @@
        "'I/O'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +304,7 @@
        "'I/O'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,44 +323,21 @@
     "\n",
     "`collections.ChainMap`: class is provided for quickly linking a number of mappings so they can be treated as a single unit. It is often much faster than creating a new dictionary and running multiple `update() `calls\n",
     "\n",
-    "`collections.Counter`: Holds the integer count of each key. Can be used to count instances of hashable objects."
+    "`collections.Counter`: Holds the integer count of each key. Can be used to count instances of hashable objects. has addition functions like `most_common` to return the odered list of tuples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name ChainMap",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-6a68e881e10b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mChainMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpylookup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChainMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuiltins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpylookup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name ChainMap"
-     ]
-    }
-   ],
-   "source": [
-    "from collections import ChainMap\n",
-    "pylookup = ChainMap(locals(), globals(), vars(builtins))\n",
-    "pylookup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'a': 4, 'b': 1, 'c': 1, 'd': 3, 'h': 1, 'k': 2, 'l': 2, 'r': 1})"
+       "Counter({'a': 4, 'b': 1, 'c': 1, 'h': 1, 'd': 3, 'r': 1, 'l': 2, 'k': 2})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,14 +352,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`collections.UserDict`: Used as base class for creating new mapping classes. The main reason we don't use `dict` as base class is that it has some implementation shortcuts that we will have to override in order to make it work.\n",
+    "`collections.UserDict`: Used as base class for creating new mapping classes. The main reason we don't use `dict` as base class is that it has some implementation shortcuts that we will have to override in order to make it work. Note that `UserDict` does not inherit from `dict` instead has `data`, which is a dict instance to avoid possible recursion issues.\n",
     "\n",
     "we will now modify the PinToFun class using this to show its effectiveness."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +391,7 @@
        "{'0': 'I/O', '1': 'LED'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +412,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Immutable Mappings\n",
+    "## Immutable Mappings\n",
     "\n",
     "mapping types are mutable but if you want to constrain the user from making changes, use this.\n",
     "\n",
