--- a/_notebooks/2021-07-25-ch3-dictionaries-and-sets.ipynb
+++ b/_notebooks/2021-07-25-ch3-dictionaries-and-sets.ipynb
@@ -863,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## dict and set under the Hood\n",
+    "## `dict` and `set` under the Hood\n",
     "\n",
     "dict and set has really fast membership operations (lookup) due to the fact that they are implemented using hash tables. Comparing this with something like a list, there is a world of difference. All this is due to the hash tables.\n",
     "\n",
@@ -871,28 +871,8 @@
     "It is implemented as a sparse array. Each cell in the array is called a `bucket`. In a dict table each bucket has 2 fields, a ref to the key and a ref to the value item. \n",
     "\n",
     "Python tries to keep 1/3 of the buckets empty. If its size increases it is copied out to a know location with larger memory. The first set in putting an element inside is to hash the item.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-35e31e935e9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhash\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
-   "source": [
-    "hash([1,2,3])"
+    "\n",
+    "To put an item in hash table, the first step is to calculate the *hash value* of the item key. This is a unique value for the given data type. The `hash()` function is called, which in turn uses the `__hash__` for calculating the hash. "
    ]
   },
   {
@@ -903,7 +883,7 @@
     {
      "data": {
       "text/plain": [
-       "2528502973977326415"
+       "1"
       ]
      },
      "execution_count": 2,
@@ -912,15 +892,13 @@
     }
    ],
    "source": [
-    " hash((1,2,3))"
+    " hash(1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`has()` is a build in function that calls the `__hash__` for user-defined types.  \n",
-    "\n",
     "If 2 objs compare equal there hash values must be equal."
    ]
   },
@@ -948,7 +926,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: There is a detailed overview of the hash table algorithms in the book. Please google for it to find it. (It is in page 89 in the book).\n",
+    "Also hashes for objects that are similar to should be as different as possible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2305843009213441, 4611686018427393)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(1.001), hash(1.002)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: There is a detailed overview of the hash table algorithms in the book. Please google for it to find it. (It is in page 89 in the book). I actually forgot all about hashes, shouldn't have skipped those classes in college...\n",
     "\n",
     "## Practical Consequeces of How dict Works\n",
     "\n",
