--- a/_notebooks/2021-07-25-ch3-dictionaries-and-sets.ipynb
+++ b/_notebooks/2021-07-25-ch3-dictionaries-and-sets.ipynb
@@ -977,6 +977,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "to sum up\n",
+    "\n",
     "Dictionaries are a keystone of Python. Beyond the basic dict , the standard library offers\n",
     "handy, ready-to-use specialized mappings like defaultdict , OrderedDict , ChainMap ,\n",
     "and Counter , all defined in the collections module. The same module also provides\n",
@@ -997,17 +999,10 @@
     "types module creates immutable mappings. There are also ABCs for Set and Mutable\n",
     "Set .\n",
     "\n",
-    "he hash table implementation underlying dict and set is extremely fast. Understand‐\n",
+    "The hash table implementation underlying dict and set is extremely fast. Understand‐\n",
     "ing its logic explains why items are apparently unordered and may even be reordered\n",
     "behind our backs. There is a price to pay for all this speed, and the price is in memory."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
