hide example post

--- a/_posts/2020-02-20-test.md
+++ b/_posts/2020-02-20-test.md
@@ -7,6 +7,8 @@ badges: true
 comments: true
 categories: [jupyter]
 image: images/chart-preview.png
+hide: true
+search_exclude: false
 nb_path: _notebooks/2020-02-20-test.ipynb
 layout: notebook
 ---
