--- a/_notebooks/2020-02-20-test.ipynb
+++ b/_notebooks/2020-02-20-test.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "you can open it at http://localhost:4000/jupyter/2020/02/20/test.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# About\n",
     "\n",
     "This notebook is a demonstration of some of capabilities of [fastpages](https://github.com/fastai/fastpages) with notebooks.\n",
